# ProjetPokemon

./: CMakeLists.txt  configuration.hpp  main.cpp
Interface/: interface.cpp  interface.hpp
MenuPrincipal/: menuprincipal.cpp  menuprincipal.hpp
Team/: menuteam.hpp
Team/Attacks/: attacklist.cpp  attacklist.hpp  attacks.cpp  attacks.hpp
Team/Attacks/Types/: types.hpp
Team/Pokemon/: pokemon.cpp  pokemon.hpp  pokemonlist.cpp  pokemonlist.hpp  stats.hpp
reference_files/: pokemon_moves.csv  stats_id.csv
tools/: tools.cpp  tools.hpp
